<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">streemd</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="test_string">This is a test string designed to fill space</string>
    <string name="test_title">Test Title</string>
    <string name="test_description">Test Description</string>
    <string-array name="post_array">
        <item>wKJ9KzGQq0w</item>
        <item >wKJ9KzGQq0w</item>
    </string-array>
    <string-array name="navigation_drawer">
        <item>Feed</item>
        <item>Create Post</item>
        <item>Search Users</item>
        <item>Profile</item>
        <item>Logout</item>
    </string-array>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="user_login">User Login</string>
    <string name="user_sign_up">User Sign Up</string>
    <string name="test_user">TestCreds</string>
    
    <string name="search_youtube">Search YouTube</string>
    <string name="search_video_hint">Enter Video Name</string>
    <string name="search_users">Search Users</string>
    <string name="search_users_hint">Enter User Name</string>
    <string name="search_button_text">Search</string>
    <string name="search_URL">http://gdata.youtube.com/feeds/api/videos</string>
    
    <string name="create_post">Create Post</string>
    <string name="title">Title</string>
    <string name="edit_title">Enter the title.</string>
    <string name="category">Category</string>
    <string-array name="categories_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="edit_description">Enter a description.</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    
	<string name="empty_feed">No Posts to show. Create posts or follow users!</string>
	<string name="empty_profile">No Posts.</string>
</resources>
