<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center">
    	
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_sign_up"
        android:textSize = "42sp"  />
    	
        <EditText
		     android:id="@+id/signUpNameEditText"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:ems="10" 
		     android:hint="@string/name">
		 </EditText>
		 
        <EditText
		     android:id="@+id/signUpEmailEditText"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:ems="10" 
		     android:hint="@string/email"
		     android:inputType="textEmailAddress">
		 </EditText>
        
        <EditText
		     android:id="@+id/signUpUsernameEditText"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:ems="10" 
		     android:hint="@string/username"
		     >
		 </EditText>
		 
        <EditText
		     android:id="@+id/signUpPasswordEditText"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:ems="10" 
		     android:hint="@string/password"
		     android:inputType="textPassword">
		 </EditText>
		 
		 <EditText
		     android:id="@+id/signUpPasswordConfirmEditText"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:ems="10" 
		     android:hint="@string/password_confirm"
		     android:inputType="textPassword">
		 </EditText>
		 
        <LinearLayout android:orientation="horizontal"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content">
	        <Button
			     android:id="@+id/signUpConfirmButton"
			     android:layout_width="wrap_content"
			     android:layout_height="wrap_content"
			     android:text="@string/sign_up" />
        </LinearLayout>

</LinearLayout>
