<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >
    
    <TextView android:id="@+id/search_header"
        android:text="@string/search_youtube"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp" 
        android:layout_marginTop="-100dp"
        android:gravity="center"/>
    
    <EditText android:id="@+id/search_field"
        android:hint="@string/search_video_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <Button android:id="@+id/search_videos_button"
        android:text="@string/search_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
